--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,20 +1,14 @@
 <div class="chat-container" data-controller="chat">
-  <div data-chat-target="chatMessages">
-    <% @messages.each do |message| %>
-      <% if message["role"] == "user" %>
-        <div class="user-message">
-          <%= message["content"] %>
-        </div>
-      <% else %>
-        <div class="assistant-message">
-          <%= message["content"] %>
-        </div>
-      <% end %>
-    <% end %>
+  <div class="chat-header">
+    <div class="mode-toggle">
+      <%= link_to "Server Sent Events", root_path(mode: 'sse'), class: @current_mode == 'sse' ? 'active' : '' %>
+      <%= link_to "Turbo Streams", root_path(mode: 'turbo'), class: @current_mode == 'turbo' ? 'active' : '' %>
+    </div>
   </div>
-  <div class="streaming-message" style="display: none;" data-chat-target="streamingMessage"></div>
-  <%= form_with(url: "/chat", data: { action: 'chat#handleSubmit', chat_target: 'chatForm' }) do |form| %>
-    <input type="text" data-chat-target="chatInput">
-    <%= form.submit "Send", data: { chat_target: "submitButton" }  %>
+
+  <% if @current_mode == 'turbo' %>
+    <%= render template: 'messages/index' %>
+  <% else %>
+    <%= render 'sse_form' %>
   <% end %>
 </div>
