--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,4 +1,4 @@
-<div class="chat-container" data-controller="chat">
+<div class="chat-container">
   <div class="chat-header">
     <div class="mode-toggle">
       <%= link_to "Server Sent Events", root_path(mode: 'sse'), class: @current_mode == 'sse' ? 'active' : '' %>
